--- a/templates/upload.html
+++ b/templates/upload.html
@@ -9,8 +9,7 @@
     <form action="/upload" method="post" enctype="multipart/form-data">
         <input type="file" name="file" id="file" class="inputfile" data-multiple-caption="{count} files selected" multiple />
         <label id="filelabel" for="file"><span>Choose a file</span></label>
-        <br><br>
-        <input class="btn btn-primary box__button" type="submit" value="Upload">
+        <input class="btn btn-primary" type="submit" value="Upload">
     </form>
 
 
