--- a/static/styles.css
+++ b/static/styles.css
@@ -46,13 +46,6 @@ main img
     max-width: 100%;
 }
 
-/* hide upload states by default */
-.box__dragndrop,
-.box__uploading,
-.box__success,
-.box__error {
-  display: none;
-}
 
 .inputfile {
     width: 0.1px;
@@ -124,3 +117,12 @@ main img
     height: 60vh;
 }
 
+.carousel-inner > .carousel-item > img {
+    width: 65vh;
+    margin: auto;
+}
+
+.carousel-inner {
+    margin-left: 50%;
+    margin-right: 50%;
+}
