--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
 
                     <td>{{ i['date'] }}</td>
 
-                    {% if i['favorited'] != 'true' %}
+                    {% if i['favorited'] == 'true' %}
                         <td>
                             <img src="https://img.icons8.com/office/16/000000/checkmark.png">
                         </td>
