--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
                     <td>
                         <a href="/uploads/{{ i['name'] }}">
-                            {{ i['name'] }}
+                            {{ i['displayName'] }}
                         </a>
                     </td>
 
