--- a/templates/file.html
+++ b/templates/file.html
@@ -1,128 +1,119 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    File
+  File
 {% endblock %}
 
 {% block main %}
 
-    <!-- Carousel block -->
-    <div id="carouselControls" class="center w-50 carousel slide" data-ride="carousel" data-interval="false">
-        <div class="carousel-inner">
-            {% for i in range(0, length) %}
-                <div class="carousel-item {% if i == index %} active{% endif %}">
-                    <img class="d-block w-100" src="{{ files[i]['path'] }}">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>{{ files[i]['name'] }}</h5>
-                    </div>
-                </div>
-            {% endfor %}
+  <!-- Image title -->
+  <img id="star" src="/static/favoriteStar.png">
+  <h4 id="title"></h4>
 
-            <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
+  <!-- Carousel block -->
+  <div id="carouselControls" class="center w-50 carousel slide" data-ride="carousel" data-interval="false">
+      <div class="carousel-inner">
+          {% for i in range(0, length) %}
+              <div class="carousel-item {% if i == index %} active{% endif %}">
+                  <img class="d-block w-100" src="{{ files[i]['path'] }}">
+              </div>
+          {% endfor %}
 
-            <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
-        </div>
-    </div>
+          <a class="carousel-control-prev" href="#carouselControls" role="button" data-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+          </a>
 
-
-    <!-- Buttons -->
-    <div class="btn-group" role="group">
-        <a href="">
-            <button type="button" class="btn btn-success">Favorite</button>
-        </a>
-    </div>
-
-    <div class="btn-group" role="group">
-        <a href="">
-            <button type="button" class="btn btn-warning">Rename</button>
-        </a>
-    </div>
-
-    <div class="btn-group" role="group">
-        <a href="">
-            <button type="button" class="btn btn-primary">Download</button>
-        </a>
-    </div>
-
-    <div class="btn-group" role="group">
-        <a href="">
-            <button type="button" class="btn btn-danger">Delete</button>
-        </a>
-    </div>
+          <a class="carousel-control-next" href="#carouselControls" role="button" data-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+          </a>
+      </div>
+  </div>
 
 
+  <!-- Buttons -->
+  <div class="btn-group" role="group">
+      <a id="favorite" href="">
+          <button type="button" class="btn btn-success">Favorite</button>
+      </a>
+  </div>
 
-    <script>
+  <div class="btn-group" role="group">
+      <button id="rename" type="button" class="btn btn-warning">Rename</button>
+  </div>
 
-        document.getElementsByClassName("carousel-control-prev")[0].addEventListener("click", rename());
+  <div class="btn-group" role="group">
+      <a id="download" href="">
+          <button type="button" class="btn btn-primary">Download</button>
+      </a>
+  </div>
 
-    /*
-        // Execute GET request
-        $.get("/get/", function (data) {
-            // Declare JSON vars
-            var index = data['index'];
-            var lastIndex = data['lastIndex'];
-            var files = data['files'];
+  <div class="btn-group" role="group">
+      <a id="delete" href="">
+          <button type="button" class="btn btn-danger">Delete</button>
+      </a>
+  </div>
 
-            var leftIndex, rightIndex;
+  <script>
 
-            for (var i = 0; i <= lastIndex; i++) {
+    var files = {{ files | safe }};
 
-            }
+    function getIndex () {
+      var active = $(".carousel").find(".carousel-inner > .active");
+      return active.index();
+    }
 
-            function getInfo (index) {
+    function updatePage () {
+      // Get vars
+      var index = getIndex();
+      var file = files[index];
+      var name = file['name'];
+      var favorited = file['favorited'];
+      var displayName = file['displayName'];
 
-                if (!index) {
-                    index = 0;
-                }
+      // Set title
+      document.getElementById("title").innerHTML = displayName;
 
-                // Get current file info
-                var file = files[index];
-                var filename = file['name'];
-                var path = file['path'];
+      // Display star if file is favorited
+      var star = document.getElementById("star");
+      if (file['favorited'] == 'false') {
+        star.style.display = "none";
+      } else {
+        star.style.display = "inline-block";
+      }
 
-                // Get left index
-                if (index == 0) {
-                    leftIndex = lastIndex;
-                } else {
-                    leftIndex = index - 1;
-                }
+      // Determine action of favorite button
+      if (favorited == 'true') {
+        var bool = 'false';
+      } else {
+        var bool = 'true';
+      }
 
-                // Get right index
-                if (index == lastIndex) {
-                    rightIndex = 0;
-                } else {
-                    rightIndex = index + 1;
-                }
+      // Get favorite URL
+      var favoriteURL = "/favorite/" + name + "/" + bool;
+      console.log(favoriteURL);
 
-                // Set title and image path
-                document.getElementById("title").innerHTML = filename;
-                document.getElementsByClassName("active")[0].firstChild.setAttribute("src", path);
+      // Update favorite button href
+      document.getElementById("favorite").setAttribute("href", favoriteURL);
+
+      // Update rename prompt function
+      var rename = document.getElementById("rename");
+      var newDisplayName;
+      rename.addEventListener("click", function () {
+          newDisplayName = prompt("Rename " + displayName + ":");
+          if (newDisplayName) {
+              window.location.href = "/rename/" + name + "/" + newDisplayName;
+          }
+      });
+
+    }
 
 
-            }
+    // Call updatePage on page load and image slide
+    $(".carousel").on("slid.bs.carousel", updatePage);
+    document.addEventListener("DOMContentLoaded", updatePage);
 
-            getInfo(index);
-
-
-
-             Do this on button clicks
-            document.getElementById("left").addEventListener("click", async function () {
-                await getInfo(leftIndex);
-            });
-
-            document.getElementById("right").addEventListener("click", async function () {
-                await getInfo(rightIndex);
-            });
-
-        });
-        */
-    </script>
+  </script>
 
 {% endblock %}
