--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,6 +15,8 @@
 
         <link href="/static/styles.css" rel="stylesheet">
 
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
@@ -52,7 +54,7 @@
 
         {% if get_flashed_messages() %}
             <header>
-                <div class="alert alert-primary border text-center" role="alert">
+                <div class="alert alert-success border text-center fade show" role="alert" data-dismiss="alert">
                     {{ get_flashed_messages() | join(" ") }}
                 </div>
             </header>
