Fix Rename and Implement Download

--- a/templates/file.html
+++ b/templates/file.html
@@ -107,6 +107,9 @@
           }
       });
 
+      // Update download button href
+      document.getElementById("download").setAttribute("href", "/download/" + name);
+
     }
 
 
