--- a/static/styles.css
+++ b/static/styles.css
@@ -29,6 +29,7 @@ main .form-control
 
     /* override Bootstrap's 100% width for form controls */
     width: auto;
+
 }
 
 main
@@ -141,4 +142,21 @@ header {
 #title {
   font-family: Raleway;
   display: inline-block;
+}
+
+h1, h2, h3 {
+    font-family: Raleway;
+}
+
+.jumbotron {
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.row {
+    margin: 1em;
+}
+
+.password-form-control {
+    margin: 10px;
 }
