--- a/templates/register.html
+++ b/templates/register.html
@@ -7,7 +7,10 @@
 {% block main %}
     <form action="/register" method="post">
         <div class="form-group">
-            <input autocomplete="off" autofocus class="form-control" name="username" placeholder="Username" type="text">
+            <input autocomplete="off" autofocus class="form-control" name="fullname" placeholder="Full Name" type="text">
+        </div>
+        <div class="form-group">
+            <input autocomplete="off" class="form-control" name="username" placeholder="Username" type="text">
         </div>
         <div class="form-group">
             <input class="form-control" name="password" placeholder="Password" type="password">
